
* Improvements:

Allow to not save configuration when exiting ZEsarUX
Allow to select normal ZEsarUX logo or X Anniversary logo
Allow to seng ZENG snapshots more frequently (even every 20 ms)
Allow to use cpu-step-mode from ZRCP on drivers stdout and simpletext
Allow autorewind setting for real tape too
Allow to disable Spectrum colours on real video mode too

Improved ZX Vision:
- Changed left click mouse behaviour: when pressing left mouse button out of a window, it will close all menus.
  If you need to keep menu open and set focus on emulated machine, just left click and also press shift key.
- Improve window title background when not all buttons are visible
- Improve clicking and drawing an always visible window
- Menus can no longer be minimized (that had no sense)
- Process switcher: unminimize windows when selecting them and they were minimized
- Process switcher: now it can be set to be always visible
- Process switcher: icon names are more descriptive
- Menu titles are translated to selected language (not everything yet, please be patient)
- Improve perspective for 3D Particles widget on View Sensors

Improved ZX Desktop:
- Allow to set parameters when redefining upper buttons, for some actions like openwindow or set machine
- Allow to reconfigure upper buttons by right clicking over them
- When defining upper buttons or f-functions to SetMachine, machine name parameter is set to current machine
- When creating new icon of type OpenWindow, a window list is displayed to select

* Fixes:

Fixed ZX Vision:
- Fixed bug when printing on footer and column was out of bounds (exactly at column 32)
- Fixed splash texts when row > 23
- Fixed pressing keys '.' and ',' on menu when machine is ZX80 or ZX81
- Fixed glitch on ZX Vision BeOS style, when pressing F5, window buttons didn't disappear or reappear
- Fixed refresh windows after pressing F8 On Screen Keyboard
- Fixed splash messages when background windows are enabled
- Fixed initial position for many windows
