@@ -23,6 +23,7 @@ Allow to seng ZENG snapshots more frequently (even every 20 ms)
 Allow to use cpu-step-mode from ZRCP on drivers stdout and simpletext
 Allow autorewind setting for real tape too
 Allow to disable Spectrum colours on real video mode too
+Allow to press hotkeys at On Screen Keyboard
 
 Improved ZX Vision:
 - Changed left click mouse behaviour: when pressing left mouse button out of a window, it will close all menus.
